Fix the problem where the time column of the output would wrap.

--- a/styles/output.css
+++ b/styles/output.css
@@ -48,8 +48,10 @@ td{
   text-align:center;
   width:7em;
 }
-.time{
+.time
+{
   border-style:none none solid none;
+  white-space: nowrap;
 }
 .day{
   border-style:none none solid solid;
